--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,10 @@ project(crypto)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "-fsanitize=address ${CMAKE_CXX_FLAGS}")
 
-add_executable(crypto main.cpp des.cpp util.cpp)
-add_executable(crypto-test test.cpp des.cpp util.cpp)
+add_library(crypto-lib des.cpp util.cpp)
+add_executable(crypto main.cpp)
+target_link_libraries(crypto crypto-lib)
+add_executable(crypto-test test.cpp)
+target_link_libraries(crypto-test crypto-lib)
 enable_testing()
 add_test(test crypto-test)
