Add initial benchmark

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,14 @@ cmake_minimum_required(VERSION 3.10)
 project(crypto)
 
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_FLAGS "-fsanitize=address ${CMAKE_CXX_FLAGS}")
+set(CMAKE_CXX_FLAGS_DEBUG "-fsanitize=address ${CMAKE_CXX_FLAGS_DEBUG}")
 
 add_library(crypto-lib des.cpp util.cpp)
 add_executable(crypto main.cpp)
 target_link_libraries(crypto crypto-lib)
 add_executable(crypto-test test.cpp)
 target_link_libraries(crypto-test crypto-lib)
+add_executable(crypto-bench bench.cpp)
+target_link_libraries(crypto-bench crypto-lib)
 enable_testing()
 add_test(test crypto-test)
