--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,6 @@ blt_add_executable(NAME crypto-test
                    DEPENDS_ON crypto-lib gtest)
 blt_add_executable(NAME md4-collision-attack
                    SOURCES md4-collision-attack.cpp
-		   DEPENDS_ON crypto-lib openmp)
+		   DEPENDS_ON crypto-lib)
 blt_add_test(NAME crypto-test
              COMMAND crypto-test)
